package edu.uees.tutorias.domain;

public interface ReservaObserver {
    void onReservaConfirmada(Reserva reserva);
}