package edu.uees.tutorias.service;

public interface Videoconferencia {
    String crearSala(String titulo, String correoDocente);
}